# tidymedia

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  config.yaml  dev-env.sh
.cargo/: config.toml  mutants.toml
.claude/commands/: tidy-verify.md
.claude/scripts/tidy-verify/: 01_dry_run.sh  02_extract_exif.sh  03_compare_buckets.sh  04_filename_conflict.sh  05_write_exif.sh  06_move_real.sh  compare_buckets.awk  compare_buckets.py  filename_conflict.awk  filename_conflict.py
.config/: nextest.toml
.github/workflows/: ci.yml
docs/: acceptance-windows.md  media-time-detection.md
mobile/: build-android.sh
mobile/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
mobile/android/app/: build.gradle.kts
models/: eyestate_yolov8.onnx  face_mesh_192x192.onnx  mobilefacenet.onnx  scrfd_10g_bnkps.onnx
scripts/: download_models.sh  export_mobilefacenet.py  simplify_onnx.py
src/: crc32.rs  file_checksum.rs  file_index.rs  interface_adapters.rs  lib.rs  main.rs  media.rs  media_index.rs  mobile.rs  multimedia.rs  tests.rs
src/adapters/: cli.rs  dispatch.rs  mod.rs  report_sink.rs  report_sink_tests.rs  sidecar.rs  sidecar_tests.rs
src/adapters/backend/: adb.rs  adb_internals_tests.rs  adb_ops_tests.rs  adb_real.rs  adb_tests.rs  factory.rs  factory_real.rs  fake.rs  fake_remote.rs  fake_remote_tests.rs  local.rs  local_edge_tests.rs  local_rename_tests.rs  local_tests.rs  mod.rs  mod_tests.rs  mtp.rs  mtp_real.rs  mtp_tests.rs  mtp_types_tests.rs  remote.rs  remote_advanced_tests.rs  remote_test_helpers.rs  remote_tests.rs  smb.rs  smb_internals_tests.rs  smb_real.rs  smb_tests.rs
src/adapters/face/: fake.rs  mod.rs  tract_eyestate.rs  tract_eyestate_real.rs  tract_eyestate_tests.rs  tract_facemesh.rs  tract_facemesh_real.rs  tract_facemesh_tests.rs  tract_mobilefacenet.rs  tract_mobilefacenet_real.rs  tract_mobilefacenet_tests.rs  tract_scrfd.rs  tract_scrfd_real.rs  tract_scrfd_tests.rs
src/adapters/ocr/: fake.rs  mod.rs  tract_dbnet.rs  tract_dbnet_real.rs  tract_dbnet_tests.rs
src/entities/: common.rs  exif.rs  exif_tests.rs  file_index.rs  file_index_advanced_tests.rs  file_index_tests.rs  file_info.rs  file_info_stream_tests.rs  file_info_tests.rs  m2ts.rs  m2ts_tests.rs  mod.rs  png.rs  png_tests.rs  riff.rs  riff_ifd_tests.rs  riff_io_tests.rs  riff_structure_tests.rs  riff_tests.rs  riff_tests_common.rs  test_common.rs  threadpool.rs  threadpool_tests.rs  tiff_ifd.rs  tiff_ifd_tests.rs  uri.rs  uri_display_tests.rs  uri_tests.rs  xmp.rs  xmp_tests.rs
src/entities/backend/: adb.rs  adb_real.rs  adb_tests.rs  factory.rs  fake.rs  fake_remote.rs  fake_remote_tests.rs  local.rs  local_tests.rs  mod.rs  mod_tests.rs  mtp.rs  mtp_real.rs  mtp_tests.rs  remote.rs  remote_tests.rs  smb.rs  smb_real.rs  smb_tests.rs
src/entities/exif/: document.rs  exif_basic_tests.rs  exif_gps_tests.rs  exif_image_tests.rs  exif_mime_tests.rs  exif_png_tests.rs  exif_tests_common.rs  exif_video_tests.rs  exif_xmp_tests.rs  image.rs  image_jpeg.rs  image_png.rs  jpeg_fallback_tests.rs  mime.rs  mod.rs  types.rs  video.rs
src/entities/file_info/: file_info_backend_tests.rs  file_info_error_tests.rs  file_info_stream_tests.rs  file_info_tests.rs  info.rs  mod.rs  paths.rs  streams.rs
src/entities/media_time/: candidate.rs  decision.rs  filename.rs  filename_tests.rs  filter.rs  fs_time.rs  mod.rs  priority.rs  resolve.rs  resolve_basic_tests.rs  resolve_majority_tests.rs  resolve_tests_common.rs  sidecar.rs
src/entities/office/: cfb.rs  cfb_tests.rs  epub.rs  epub_tests.rs  iwork.rs  iwork_tests.rs  mindmap_mm.rs  mindmap_mm_tests.rs  mindmap_zip.rs  mindmap_zip_tests.rs  mod.rs  mod_tests.rs  odf.rs  odf_tests.rs  ooxml.rs  ooxml_tests.rs  pdf.rs  pdf_tests.rs  rtf.rs  rtf_tests.rs  text.rs
src/frameworks/: config.rs  config_expand_tests.rs  config_load_tests.rs  config_test_common.rs  mobile.rs  mobile_tests.rs  mod.rs
src/interface_adapters/: mod.rs  use_cases.rs
src/interface_adapters/use_cases/: copy.rs  entities.rs  find.rs  mod.rs
src/interface_adapters/use_cases/entities/: exif.rs  file_checksum.rs  file_index.rs  file_info.rs  file_meta.rs  mod.rs  test_common.rs  tests.rs
src/use_cases/: copy.rs  find.rs  mod.rs
src/use_cases/entities/: common.rs  exif.rs  file_index.rs  file_info.rs  file_info_tests.rs  mod.rs  test_common.rs
src/usecases/: archive_template.rs  archive_template_tests.rs  config.rs  copy.rs  copy_advanced_tests.rs  copy_tests.rs  find.rs  find_tests.rs  mod.rs  report.rs
src/usecases/copy/: copy_advanced_tests.rs  copy_generate_tests.rs  copy_overlap_tests.rs  copy_tests.rs  mod.rs  naming.rs  ops.rs  run.rs
src/usecases/cull/: crop.rs  face_align.rs  face_align_tests.rs  face_scoring.rs  face_scoring_tests.rs  group_writer.rs  group_writer_tests.rs  identity_cluster.rs  identity_cluster_tests.rs  mod.rs  phash.rs  report.rs  run.rs  run_tests.rs  sharpness.rs  util.rs
src/usecases/face/: mod.rs
src/usecases/move_text_shot/: mod.rs  report.rs  run.rs  run_tests.rs
src/usecases/ocr/: mod.rs
tests/: checksum.rs  cli_smoke.rs  common.rs  data1  data2  file_checksum.rs  file_index.rs  hash_algorithm.rs  lib_tidy.rs  media_time_spec.rs  path.rs
tests/data/: data_large_diff  data_small  photo-takeout.json  sample-canon-avchd.m2ts  sample-docx-dated.docx  sample-docx-no-core.docx  sample-fuji-strd.avi  sample-no-track-date.mkv  sample-pptx-dated.pptx  sample-with-mkv-date.mkv  sample-xlsx-dated.xlsx  sample-xmp.xmp
tests/fixtures/: gen.sh  gen_jpeg_makernotes_broken.py  gen_ooxml.py  gen_pdf.py  gen_png_exif.py
tests/lib_tidy/: adb_fake_errors.rs  archive.rs  backends.rs  cull.rs  dispatch_and_cli.rs  move_failure_recovery.rs  move_idempotency.rs  move_text_shot.rs  office_archive.rs  real_factory.rs  run_cli_flags.rs  windows_path.rs  windows_same_volume.rs
tests/media_time/: common.rs  cross_validation.rs  p0_authoritative.rs  p1_digitized.rs  p2_filename.rs  p3_sidecar.rs  p4_filesystem.rs  priority_ordering.rs  result_fields.rs  timezone.rs  traps.rs
(+4 files in other folders)
