[package]
name = "tidymedia"
version = "1.1.4"
edition = "2024"

[features]
default = []
# 启用真实 SMB 后端（pavao + libsmbclient C 库）。
# 编译前需安装系统包：`apt install -y libsmbclient-dev libsmbclient`。
# 未启用时 SmbBackend::new() 返 Unsupported，但 SmbBackend::with_client(fake) 仍可用于测试。
smb-backend = ["dep:pavao"]
# 占位：真实 MTP 后端待 future PR 选定 crate（libmtp-rs / gphoto2 / 自接 rusb）。
# 当前启用 feature 也仍是 stub，运行期返 Unsupported。
mtp-backend = []
# 启用真实 ADB 后端（adb_client crate，走 TCP 与本机 `adb` daemon 协议）。
# 运行前需要在 host 上启动 `adb start-server`，目标 Android 设备开 USB 调试 + 文件传输。
# 未启用时 AdbBackend::new() 返 Unsupported，但 AdbBackend::with_client(fake) 仍可用于测试。
adb-backend = ["dep:adb_client"]
# 启用 Android 应用层（uniffi 接口 + cdylib），交叉编译到 aarch64-linux-android 用。
# 桌面 build 不应启用此 feature（cdylib 在 Linux 上会拉空 stub）。
# 编译流程：`cargo ndk -t aarch64-linux-android -p 30 rustc --lib --crate-type cdylib --release --features android-app`
# 之后 `uniffi-bindgen generate ... --library libtidymedia.so --language kotlin`
# 生成 Kotlin 绑定，见 `mobile/build-android.sh`。
android-app = ["dep:uniffi"]

# 仅 rlib：cdylib 只在 Android 交叉编译时需要，由 build-android.sh 用
# `cargo rustc --crate-type cdylib` 按需产出。若写死 cdylib，Windows 上
# lib 与 bin 的 tidymedia.pdb 输出文件名冲突（cargo#6313）。
[lib]
crate-type = ["rlib"]

[dependencies]
adb_client = { version = "3.2", optional = true }
uniffi = { version = "0.31", optional = true }
camino = { version = "*", features = ["serde1"] }
chrono = "*"
clap = { version = "*", features = ["derive"] }
generic-array = "0"
hex = "*"
ignore = "*"
infer = "*"
memmap2 = "*"
nom-exif = "*"
parking_lot = "*"
pavao = { version = "0.2", optional = true }
percent-encoding = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
sha2 = "*"
tempfile = "*"
thiserror = "*"
time = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
wyhash = "*"
xxhash-rust = { version = "*", features = ["xxh3"] }

[dev-dependencies]
assert_cmd = "*"
chrono = "*"
filetime = "*"
predicates = "*"
pretty_assertions = "*"
rstest = "*"

[lints.rust]
future-incompatible = { level = "warn", priority = -2 }
nonstandard_style = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "warn", priority = -1 }
redundant_clone = "deny"

[profile.release]
opt-level = 0

# 临时 patch：nom-exif 3.6.0 入口 MIME gate（file.rs:114 parse_bmff_mime）
# 不识别 pnot 起头的老 QuickTime MOV（NIKON COOLPIX S5/P5000、Casio 等早期机型），
# 直接返 UnsupportedFormat。fork 在 parse_bmff_mime 入口短路：若首 box 为 pnot 即返
# QuickTime mime；mov.rs::extract_moov_body_from_buf 后续 atom 扫描已能正确处理。
# 上游 PR: https://github.com/mindeng/nom-exif/pulls （feat/legacy-quicktime-pnot）
# 合并发版后切回 crates.io。
[patch.crates-io]
nom-exif = { git = "https://github.com/enjoypi/nom-exif.git", branch = "feat/legacy-quicktime-pnot" }
