[package]
name = "tidymedia"
version = "1.1.4"
edition = "2024"

[features]
default = []
# 启用真实 SMB 后端（pavao + libsmbclient C 库）。
# 编译前需安装系统包：`apt install -y libsmbclient-dev libsmbclient`。
# 未启用时 SmbBackend::new() 返 Unsupported，但 SmbBackend::with_client(fake) 仍可用于测试。
smb-backend = ["dep:pavao"]
# 占位：真实 MTP 后端待 future PR 选定 crate（libmtp-rs / gphoto2 / 自接 rusb）。
# 当前启用 feature 也仍是 stub，运行期返 Unsupported。
mtp-backend = []
# 启用真实 ADB 后端（adb_client crate，走 TCP 与本机 `adb` daemon 协议）。
# 运行前需要在 host 上启动 `adb start-server`，目标 Android 设备开 USB 调试 + 文件传输。
# 未启用时 AdbBackend::new() 返 Unsupported，但 AdbBackend::with_client(fake) 仍可用于测试。
adb-backend = ["dep:adb_client"]
# 启用 Android 应用层（uniffi 接口 + cdylib），交叉编译到 aarch64-linux-android 用。
# 桌面 build 不应启用此 feature（cdylib 在 Linux 上会拉空 stub）。
# 编译流程：`cargo ndk -t aarch64-linux-android -p 30 rustc --lib --crate-type cdylib --release --features android-app`
# 之后 `uniffi-bindgen generate ... --library libtidymedia.so --language kotlin`
# 生成 Kotlin 绑定，见 `mobile/build-android.sh`。
android-app = ["dep:uniffi"]
# 仅 rlib：cdylib 只在 Android 交叉编译时需要，由 build-android.sh 用
# `cargo rustc --crate-type cdylib` 按需产出。若写死 cdylib，Windows 上
# lib 与 bin 的 tidymedia.pdb 输出文件名冲突（cargo#6313）。
[lib]
crate-type = ["rlib"]

# 业务关键 dep MUST 用 caret 约束（不写 `"*"` 通配）：
# cargo update 拉到不兼容主版本会编译失败（sha2 0.10→0.11 已踩坑，CLAUDE.md「项目 Gotcha」记录）。
# 锁主版本 + 副版本，让 patch 自由升；新主版本需手动验证后才升。
[dependencies]
adb_client = { version = "3.2", optional = true }
uniffi = { version = "0.31", optional = true }
camino = { version = "1.2", features = ["serde1"] }
cfb = "0.7"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
generic-array = "0"
hex = "0.4"
ignore = "0.4"
infer = "0.19"
memmap2 = "0.9"
nom-exif = "3.6"
parking_lot = "0.12"
pavao = { version = "0.2", optional = true }
percent-encoding = "2.3"
plist = "1.9"
rayon = "1.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
time = "0.3"
tract-onnx = "0.23"
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wyhash = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = "8"

[dev-dependencies]
assert_cmd = "2"
chrono = "0.4"
filetime = "0.2"
predicates = "3"
pretty_assertions = "1"
rstest = "0.26"

[lints.rust]
future-incompatible = { level = "warn", priority = -2 }
nonstandard_style = { level = "deny", priority = -1 }
# 严格覆盖率 nightly 口径用 `--cfg=coverage_nightly` 启用 `feature(coverage_attribute)`
# + `#[coverage(off)]`；非 coverage 编译时该 cfg 缺失 → 注册为已知避免 unexpected_cfgs。
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "warn", priority = -1 }
redundant_clone = "deny"

[profile.release]
opt-level = 0

# 临时 patch：nom-exif 3.6.0 入口 MIME gate（file.rs parse_bmff_mime）只认 ftyp/wide
# 起头，不识别老 QuickTime MOV 的两种变体：pnot 起头（NIKON COOLPIX S5/P5000、Casio
# 等早期机型）与 mdat 起头（无任何头 atom、moov 在文件末尾），直接返 UnsupportedFormat。
# fork 在 parse_bmff_mime 入口按首 box header（仅 header——mdat body 远超 128B 解析
# buffer）短路返 QuickTime mime；mov.rs::extract_moov_body_from_buf 经 ClearAndSkip
# 跳过任意大小 mdat 后解析 moov。
# 上游 PR: https://github.com/mindeng/nom-exif/pulls （feat/legacy-quicktime-pnot）
# 合并发版后切回 crates.io。
[patch.crates-io]
nom-exif = { git = "https://github.com/enjoypi/nom-exif.git", branch = "feat/legacy-quicktime-pnot" }
